# greenhouse

backend/: .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose-api.yml  docker-compose-grafana.yml  docker-compose-old.yml  docker-compose-psql.yml  docker-compose.test.yml  docker-compose.yml  main.py  models.py  redis_client.py  requirements.txt  restart-build-docker.sh  schemas.py
backend/database/: init.sql  init_old.sql  init_old2.sql
backend/grafana/provisioning/dashboards/: dashboards.yaml  greenhouse.json  redis.json
backend/grafana/provisioning/datasources/: datasources.yaml
backend/integration_tests/: test_full_stack_api.py
backend/routers/: alerts.py  devices.py  light_schedules.py  logs.py  sensor_readings.py  watering_schedules.py
backend/tests/: conftest.py  test_api_endpoints.py
controller/: CMakeLists.txt  README.md
controller/include/controller/: api_client.hpp  controller.hpp  device.hpp  device_type.hpp  firmware_factory.hpp  generic_sensor.hpp  hardware_sensor.hpp  light_sensor.hpp  log_entry.hpp  logger.hpp  mock_hardware_sensor.hpp  moisture_sensor.hpp  rest_api_client.hpp  runtime.hpp  sensor_device.hpp  sensor_reading.hpp  utils.hpp
controller/include/firmware/: mock.hpp
controller/src/: controller.cpp  device.cpp  firmware_factory.cpp  logger.cpp  main-demo.cpp  main-test.cpp  main.cpp  rest_api_client.cpp  runtime.cpp  sensor_device.cpp  utils.cpp
docs/: greenhouse-class-diagram.puml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: theme-toggle.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  (+3 more)
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
